--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
         electricaltest_app_default {
             applicationId "com.isuo.inspection.application"
             dimension "default"
-            resValue "string", "app_name", "省巡检"
+            resValue "string", "app_name", "点检"
             buildConfigField "String", "HOST", '"http://114.215.94.141:8085/"'
             buildConfigField "String", "UMENG_CHANNEL", '"defaultChannel"'
             manifestPlaceholders = [
@@ -166,17 +166,14 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-
+    //图表库
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     //EventBus
     implementation 'org.greenrobot:eventbus:3.2.0'
-
     //时间选择
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
-
     //腾讯浏览服务 tbs
     implementation 'com.tencent.tbs.tbssdk:sdk:43903'
-
     //文件选择器
     implementation 'com.leon:lfilepickerlibrary:1.8.0'
     implementation files('libs/logger_v1.3.0.jar')
