--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ android {
     }
     android.applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "省巡检${variant.flavorName}_V${defaultConfig.versionName}_${variant.buildType.name}.apk"
+            outputFileName = "点检${variant.flavorName}_V${defaultConfig.versionName}_${variant.buildType.name}.apk"
         }
     }
     compileOptions {
