--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
             applicationId "com.isuo.inspection.application"
             dimension "default"
             resValue "string", "app_name", "点检"
-            buildConfigField "String", "HOST", '"http://114.215.94.141:8085/"'
+            buildConfigField "String", "HOST", '"http://172.16.70.249:8060/oms/api/"'
             buildConfigField "String", "UMENG_CHANNEL", '"defaultChannel"'
             manifestPlaceholders = [
                     TASK_AFFINITY_VALUE: "android.task.isuo.inspection",
